<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PAT</string>
    <string name="Yaxis">Y</string>
    <string name="Xaxis">X</string>
    <string name="red_line">Red Line</string>
    <string name="blue_line">Blue Line</string>
    <string name="below_menu">Sub-Menu will go here!</string>
    <string name="submit">Submit</string>
    <string name="language">Translate</string>
    <string name="string_choice">Choice</string>
    <string name="image_content_description">Image</string>
    <string name="lock_screen_information">Enter PIN number</string>

    <!-- Navigation labels -->
    <string name="navigation_home">Home</string>
    <string name="navigation_log">Log</string>
    <string name="navigation_tracker">Tracker</string>
    <string name="navigation_exercises">Exercises</string>
    <string name="navigation_discussion">Discussion</string>
    <string name="navigation_account">My Account</string>
    <string name="navigation_contact">Find Help</string>
    <string name="navigation_report">Report Issue</string>
    <string name="navigation_logoff">Log Off</string>
    <string name="navigation_browse">Browse Posts</string>
    <string name="navigation_create">New Post</string>
    <string name="navigation_favourites">My Favourites</string>
    <string name="navigation_mine">My Posts</string>
    
    
    <string-array name="spinner_list_items">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
        <item>Agenda</item>
    </string-array>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Activities label -->
    <string name="title_activity_nav_list">NavListActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_graph">Graph</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_contact_details">Contact Details</string>

    <!-- Action bar -->
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_contact">Contact</string>
    <string name="action_search">Search</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Enter phone number</string>
    <string name="action_status">Status</string>
    <string name="action_save">Save</string>
    <string name="action_exit">Exit</string>

    <!-- Contact -->
    <string-array name="contact_name">
        <item>Alex</item>
        <item>Calum</item>
        <item>David</item>
        <item>Lara</item>
        <item>Milton</item>
        <item>Nick</item>
        <item>Sophie</item>
        <item>Milton</item>
        <item>Milton</item>
        <item>Milton</item>
    </string-array>
    <string-array name="contact_icons">
        <item>@drawable/ic_milton1</item>
        <item>@drawable/ic_milton2</item>
        <item>@drawable/ic_milton3</item>
        <item>@drawable/ic_milton4</item>
        <item>@drawable/ic_milton5</item>
        <item>@drawable/ic_milton6</item>
        <item>@drawable/ic_milton7</item>
        <item>@drawable/ic_milton5</item>
        <item>@drawable/ic_milton3</item>
        <item>@drawable/ic_milton1</item>
    </string-array>
    <string-array name="contact_phone_number">
        <item>07789631579</item>
        <item>07135764379</item>
        <item>07132065516</item>
        <item>07651616354</item>
        <item>07165316512</item>
        <item>07219841328</item>
        <item>07106518645</item>
        <item>07898794646</item>
        <item>07946131313</item>
        <item>07664678746</item>
    </string-array>

    <!-- Feedback -->
    <string name="feedback_heading">Please give us any feedback</string>
    <string name="feedback_title_label">Title</string>
    <string name="feedback_comment_label">Comment</string>
    <string name="feedback_submit_button_label">Submit</string>
    <string name="feedback_rating_label">Rating:</string>
    <string name="feedback_email_label">e-mail</string>
    <string name="feedback_email_hint">e.g. my.mail@ncl.ac.uk</string>
    <string name="feedback_scale_end">5</string>
    <string name="feedback_comment_hint">Write your thoughts here!..</string>
    <string name="feedback_title_hint">Write the problem topic</string>
    
    
    <!-- Dialog box -->
    <string name="dialog_title">I am Milton Li</string>
    <string name="dialog_message">I want to kiss you</string>
    <string name="dialog_button_message">Click me to see a dialog box</string>
    <string name="dialog_accpet">Accept</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="brightness">Brightness</string>
    <string name="network">Network</string>
    <string name="sound">Sound</string>
    <string name="keyboard">Keyboard</string>
    <string name="kiss_me">Kiss me baby</string>

    <!-- Seek bar -->
    <string name="scale_beginning">0</string>
    <string name="scale_end">10</string>
    <string name="thoughts_hint">What are your thoughts?..</string>
    <string name="seriousness_heading">How serious is the situation?</string>
    <string name="anxiety_heading">How anxious do you feel?</string>
    <string name="save_button_text">Save</string>
    <string name="status_save">Save</string>
    <string name="status_exit">Exit</string>
    <string name="status_summary_hint">Summary</string>
    <string name="status_comment_hint">Comment</string>

    <!-- Breathing Exercise -->
    <string name="breathEx">Breathing Exercise</string>
    <string name="seconds">Seconds:</string>
    <string name="secondsLabel">Seconds</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
	<string name="exerciseDefaultDuration">60</string>
	<string name="exerciseDefaultCycles">20</string>
	<string name="animation_speed">Speed</string>
	<string name="cycles">Cycles:</string>
	<string name="cyclesLabel">Cycles</string>
	
	
	<string-array name="countdown_options">
        <item>Seconds</item>
        <item>Cycles</item>
    </string-array>
	
    <!-- Start of calm down text -->
    <string name="CalmDown">Being patient is key. Take a couple seconds to cool down.
    Slowly  take deep breaths in and deep breaths out and let it all out.</string>

    <!-- Settings Preference -->
    <string name="pin_hint">Digits with max 8 characters</string>
    <string name="pref_category_personalise">Personalise</string>
    <string name="pref_category_pat">Personal Anxiety Tracker</string>
    <string name="pref_notification_title">Notification</string>
    <string name="pref_language_title">Language</string>
    <string name="pref_lockscreen_title">Show lockscreen</string>
    <string name="pref_pin_title">Lockscreen pin number</string>
    <string name="pref_about_us_title">About Us</string>
    <string name="pref_night_mode_title">Night Mode</string>
    <string name="pref_notification_summ">Notification on everyday?</string>
    <string name="pref_lockscreen_summ">Show lockscreen on startup</string>
    <string name="pref_about_us_summ">Newcastle University</string>
    <string name="pref_night_mode_summ">Night Mode helps protect your eyes</string>
    <string name="pref_breath_exercise_countdown">Exercise countdown type </string>

    <string-array name="pref_language_list_options">
        <item>English</item>
        <item>Chinese</item>
    </string-array>
    <string-array name="pref_language_list_values">
        <item>en</item>
        <item>zh</item>
    </string-array>
    

    <!-- Splash -->
    <string-array name="button_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>0</item>
        <item>DEL</item>
    </string-array>

    <string name="seriousness">Seriousness</string>
    <string name="anxiety">Anxiety</string>
    <string name="Ref_seriousness">Reflected\nSeriousness</string>
    <string name="Ref_anxiety">Reflected\nAnxiety</string>
    <string name="rating">Rating</string>
    <string name="time">Time</string>
    <string name="title_activity_social">SocialActivity</string>
    
        <!-- the x axis labelling for the week -->
    <string-array name="x_axis_grid_week">

        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>

    </string-array>

    <!-- the x axis labelling for the month-->
    <string-array name="x_axis_grid_month">
        <item>Week 1</item>
        <item>Week 2</item>
        <item>Week 3</item>
        <item>Week 4</item>
        <item>Week 5</item>


    </string-array>

    <!-- the x axis labelling for the year -->
    <string-array name="x_axis_grid_year">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>jul</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
        <item>Sun</item>

    </string-array>
    <string name="x_axis_title_days">DAYS OF WEEK</string>
    <string name="x_axis_title_month">WEEKS OF MONTH</string>
    <string name="x_axis_title_year">YEAR</string>
    
    <!-- Social Features -->
    <string name="social_fragment_signin_loginText">Sign In to Your Account</string>
    <string name="social_fragment_signin_email">\@Newcastle.ac.uk</string>
    <string name="social_fragment_signin_buttonText">Sign In</string>
    <string name="social_fragment_signup_loginText">Create a new account</string>
    <string name="social_fragment_signup_email">\@Newcastle.ac.uk</string>
    <string name="social_fragment_signup_buttonText">Sign Up</string>
    <string name="social_fragment_list_addPost">Add Reply</string>
    
    <string-array name="social_list_items">
        <item>Newest</item>
        <item>Oldest</item>
        <item>Top Rated</item>
    </string-array>
    
    

</resources>
