<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#7cdfff"

    tools:context=".GraphActivity" >

    <!-- android:background="#8fffd7" -->

    <com.team5.graph.LineGraphView
        android:id="@+id/myLineGraph"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
       >
    </com.team5.graph.LineGraphView>

    <com.team5.graph.PieChartView
        android:id="@+id/myPieChart"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"
       >
    </com.team5.graph.PieChartView>

    <com.team5.graph.BarChartView
        android:id="@+id/myBarChart"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:visibility="invisible"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/myPieChart"
        android:layout_alignStart="@+id/myPieChart">
    </com.team5.graph.BarChartView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:paddingRight="0dp"
        android:layout_marginTop="195dp"
        android:gravity="center"
        android:rotation="270"
        android:text="@string/rating"
        android:textStyle="bold" />
<!--
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myLineGraph"
        android:layout_marginLeft="200dp"
        android:text="@string/time"
        android:textStyle="bold" />
        -->

    <CheckBox
        android:id="@+id/seriousnessCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#5970ff"
        android:checked="true"
        android:text="@string/seriousness"
        android:visibility="invisible"

        android:layout_alignTop="@+id/AnxietyCheckBox"
        android:layout_alignRight="@+id/myPieChart"
        android:layout_alignEnd="@+id/myPieChart" />

    <CheckBox
        android:id="@+id/AnxietyCheckBox"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:background="#1f4aff"
        android:checked="true"
        android:text="@string/anxiety"
        android:visibility="invisible"

        android:layout_above="@+id/ref_anxietyCheckBox"
        android:layout_alignLeft="@+id/myPieChart"
        android:layout_alignStart="@+id/myPieChart" />

    <CheckBox
        android:id="@+id/ref_seriousnessCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/seriousnessCheckBox"
        android:background="#5dff9c"
        android:checked="true"
        android:visibility="invisible"
        android:text="@string/Ref_seriousness"
        android:layout_below="@+id/seriousnessCheckBox"
        android:layout_alignRight="@+id/seriousnessCheckBox"
        android:layout_alignEnd="@+id/seriousnessCheckBox" />

    <CheckBox
        android:id="@+id/ref_anxietyCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ff3d3f"
        android:checked="true"
        android:visibility="invisible"

        android:text="@string/Ref_anxiety"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/AnxietyCheckBox"
        android:layout_alignEnd="@+id/AnxietyCheckBox"
        android:layout_alignLeft="@+id/AnxietyCheckBox"
        android:layout_alignStart="@+id/AnxietyCheckBox" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/x_axis_title_days"
        android:id="@+id/x_axis_title"
        android:layout_toRightOf="@+id/AnxietyCheckBox"
        android:layout_above="@+id/seriousnessCheckBox"
        android:textStyle="bold"/>

</RelativeLayout>