<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SeekBarLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="0dp"
    android:background="@color/backgroundColorSeekBar"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/seriousnessHeading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="45dp"
            android:text="@string/seriousness_heading"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/seekBarHeadingColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seriousnessSeekBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:maxHeight="12dp"
            android:progress="0"
            android:progressDrawable="@drawable/seekbarprogress"
            android:thumb="@drawable/circlebutton"
            android:thumbOffset="10dp" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" >

            <TextView
                android:id="@+id/scaleBeginning1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_beginning"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <TextView
                android:id="@+id/scaleEnd1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="19dp"
                android:gravity="right"
                android:text="@string/scale_end"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/anxietyHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="45dp"
        android:text="@string/anxiety_heading"
        android:textColor="@color/seekBarHeadingColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/anxietySeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:maxHeight="12dp"
        android:progress="0"
        android:progressDrawable="@drawable/seekbarprogress"
        android:thumb="@drawable/circlebutton"
        android:thumbOffset="10dp" />

    <TextView
        android:id="@+id/scaleBeginning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="19dp"
        android:text="@string/scale_beginning"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/scaleEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scale_end"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/commentsEditText"
        android:layout_width="270dp"
        android:layout_height="170dp"
        android:layout_marginBottom="43dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/commenttextfield1"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/thoughts_hint"
        android:maxLines="30"
        android:padding="@dimen/seek_bar_text_padding"
        android:scrollbars="vertical" >
    </EditText>

    <Button
        android:id="@+id/seekBarSubmitButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/commenttextfield1"
        android:gravity="center"
        android:text="@string/save_button_text"
        android:textColor="@color/seekBarHeadingColor"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>